Building automated binning analysis functionality

--- a/docs/assets/OLB_references.bib
+++ b/docs/assets/OLB_references.bib
@@ -54,3 +54,14 @@ eprint = {
   URL     = {http://www.thp.uni-koeln.de/trebst/thesis/PhD_CarstenBauer.pdf},
   annote  = {Specifically see Section 2.6 for the binning analysis and Chapter 2 for an overall great introduction to Markov Chain Monte Carlo methods.}
 }
+
+@inbook{GubernatisKawashimaWerner, 
+  place={Cambridge},
+  title={Data analysis},
+  DOI={10.1017/CBO9780511902581.004},
+  booktitle={Quantum Monte Carlo Methods: Algorithms for Lattice Models},
+  publisher={Cambridge University Press},
+  author={Gubernatis, James and Kawashima, Naoki and Werner, Philipp},
+  year={2016},
+  pages={43–65}
+}
